add fw-xxx(to control font-weight) style.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 
   <!-- CSS
@@ -26,8 +25,7 @@
   <link rel="stylesheet" href="css/site.css">
   <link rel="stylesheet" href="css/pushy.css">
 
-  <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
-
+  <link href='https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700' rel='stylesheet' type='text/css'>
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/logo.png">
@@ -68,7 +66,7 @@
     <div class="row">
       <div class="tx-center">
         <img src="images/logo.png" width="180px" />
-          <h4>Customizing is as easy as pie.</h4>
+          <h4 class="fw-100"><span class="fw-600">Customizing</span> is as </span><span class="fw-600">easy</span> as pie.</h4>
       </div>
     </div>
   </div>
