--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700' rel='stylesheet' type='text/css'>
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -24,8 +24,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/site.css">
   <link rel="stylesheet" href="css/pushy.css">
+  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
-  <link href='https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700' rel='stylesheet' type='text/css'>
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/logo.png">
@@ -198,11 +198,13 @@
       <textarea class="u-full-width" placeholder="Hi Dave …" id="exampleMessage"></textarea>
       <div class="q-formbox">
           <div>
-              <input type="radio" name="sample-radio" checked="checked" id="radio-1" /><label for="radio-1">radio 1</label>
-              <input type="radio" name="sample-radio" id="radio-2" /><label for="radio-2">radio 2</label>
+            <h6>Choose one.</h6>
+            <input type="radio" name="sample-radio" checked="checked" id="radio-1" /><label for="radio-1">Windows</label>
+            <input type="radio" name="sample-radio" id="radio-2" /><label for="radio-2">Mac</label>
+            <input type="radio" name="sample-radio" id="radio-3" /><label for="radio-3">Linux</label>
           </div>
           <div>
-              <input type="checkbox" name="sample-checkbox" checked="checked" id="checkbox" /><label for="checkbox">checkbox</label>
+              <input type="checkbox" name="sample-checkbox" checked="checked" id="checkbox" /><label for="checkbox">Do you agree to the <a href="#">Terms of Use?</a></label>
           </div>
       </div>
       <input class="btn-dark" type="submit" value="Submit">
