--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </header>
 
 <div class="clean-search">
-  <input class="clean-search-input" type="text" placeholder="Search..." />
+  <input class="clean-search-input" type="text" placeholder="Search everything and anything..." />
   <a class="clean-search-btn"><i class="icon ion-ios-search-strong"></i></a>
 </div>
 
@@ -66,7 +66,7 @@
     <div class="row">
       <div class="tx-center">
         <img src="images/logo.png" width="180px" />
-          <h4 class="fw-100"><span class="fw-600">Customizing</span> is as </span><span class="fw-600">easy</span> as pie.</h4>
+          <h4 class="fw-100"><span class="fw-600">Customizing</span> is<br class="show-xs"> as</span><span class="fw-600"> easy</span> as pie.</h4>
       </div>
     </div>
   </div>
