--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
     <a class="menu-btn"><i class="icon ion-navicon"></i></a>
   </div>
   <nav class="pmenu pmenu-left">
-    <div class="spacer-sm"></div>
-    <div class="tx-center menu-brand">
-      <img class="" src="images/logo.png" width="100px" />
-      <p>QWERTY</p>
+    <div class="brand-box">
+      <div class="spacer-sm"></div>
+      <div class="tx-center menu-brand">
+        <img class="" src="images/logo.png" width="100px" />
+        <p>QWERTY</p>
+      </div>
+      <div class="spacer-sm"></div>
     </div>
-    <hr />
     <ul>
       <li class="pmenu-link"><a href="#">Introduction</a></li>
       <li class="pmenu-link"><a href="#">Conception</a></li>
@@ -79,7 +81,7 @@
     <div class="row">
       <div class="tx-center">
         <img src="images/logo.png" width="180px" />
-        <h4 class="fw-100"><span class="fw-500">Customizing</span> is<br class="show-xs"> as</span><span class="fw-500"> easy</span> as pie.</h4>
+        <h4 class="fw-100"><span class="fw-500">Customizing</span><br class="show-xs"> is as</span><span class="fw-500"> easy</span> as pie.</h4>
         <button class="btn btn-dark menu-btn"><i class="icon ion-navicon"></i> Menu</button>
       </div>
     </div>
