change menu content

--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
       <div class="spacer-sm"></div>
     </div>
     <ul>
-      <li class="pmenu-link"><a href="#">Introduction</a></li>
-      <li class="pmenu-link"><a href="#">Conception</a></li>
+      <li class="pmenu-link"><a href="#"><i class="icon ion-flash"></i>&nbsp;&nbsp;Intro</a></li>
+      <li class="pmenu-link"><a href="#"><i class="icon ion-coffee"></i>&nbsp;&nbsp;Conception</a></li>
+      <li class="pmenu-link"><a href="#"><i class="icon ion-code"></i>&nbsp;&nbsp;CheetSheet</a></li>
       <li class="pmenu-submenu">
-          <a href="#">Examples  <i class="pmenu-icon icon ion-ios-arrow-right"></i></a>
+          <a href="#"><i class="icon ion-document-text"></i>&nbsp;&nbsp;Templates  <i class="pmenu-icon icon ion-ios-arrow-right"></i></a>
           <ul>
-              <li class="pmenu-link"><a href="#">Item 1</a></li>
-              <li class="pmenu-link"><a href="#">Item 2</a></li>
-              <li class="pmenu-link"><a href="#">Item 3</a></li>
+              <li class="pmenu-link"><a href="#">Dashboard</a></li>
+              <li class="pmenu-link"><a href="#">Landing Pages</a></li>
+              <li class="pmenu-link"><a href="">Coming Soon...</a></li>
           </ul>
       </li>
-      <li class="pmenu-link"><a href="#">Themes</a></li>
-      <li class="pmenu-link"><a href="https://github.com/thousandjapan/qwerty" target="_blank"><i class="icon ion-social-github"></i> Guthub <i class="icon ion-android-open"></i></a></li>
+      <li class="pmenu-link"><a href="https://github.com/thousandjapan/qwerty" target="_blank"><i class="icon ion-social-github"></i>&nbsp;&nbsp;Guthub <i class="icon ion-android-open"></i></a></li>
     </ul>
   </nav>
   <div class="header-center">
