--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
       <li class="pmenu-submenu">
           <a href="#"><i class="icon ion-document-text"></i>&nbsp;&nbsp;Templates  <i class="pmenu-icon icon ion-ios-arrow-right"></i></a>
           <ul>
-              <li class="pmenu-link"><a href="#">Dashboard</a></li>
+              <li class="pmenu-link"><a href="#">
+                Dashboard</a></li>
               <li class="pmenu-link"><a href="#">Landing Pages</a></li>
               <li class="pmenu-link"><a href="">Coming Soon...</a></li>
           </ul>
@@ -76,7 +77,10 @@
 
 <div class="site-overlay"></div>
 
+<!--****** MAIN CONTENT ************** -->
+
 <div class="wrapper">
+
   <div class="container">
     <div class="row">
       <div class="tx-center">
@@ -89,13 +93,13 @@
 
   <div class="container">
     <div class="row">
-      <div class="one-half column">
-        <h4>Visiblity</h4>
-        <p class="show-xl">This content is visible Desktop HD sreen</p>
-        <p class="show-lg">This content is visible Desktop sreen</p>
-        <p class="show-md">This content is visible tablet sreen</p>
-        <p class="show-sm">This content is visible phablet sreen</p>
-        <p class="show-xs">This content is visible mobile sreen</p>
+      <h4>Aligner</h4>
+      <div class="aligner" style="height: 200px;">
+        <p class="center">Hello</p>
+        <p class="right">Hello</p>
+        <p class="left">Hello</p>
+        <p class="right bottom">Hello</p>
+        <p class="left bottom">Hello</p>
       </div>
     </div>
   </div>
