--- a/index.html
+++ b/index.html
@@ -93,7 +93,80 @@
 
   <div class="container">
     <div class="row">
-
+    	<div class="cards">
+    		<a class="card" href="#">
+  				<span class="card-title">
+  					<h3>This is a title for a card.</h3>
+  				</span>
+    			<span class="card-summary">
+    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+    			</span>
+    			<span class="card-meta">
+    				Published: June 18th, 2015
+    			</span>
+  		  </a>
+    		<a class="card" href="#">
+  				<span class="card-title">
+  					<h3>This is a title for a card.</h3>
+  				</span>
+    			<span class="card-summary">
+    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+    			</span>
+    			<span class="card-meta">
+    				Published: June 18th, 2015
+    			</span>
+    		</a>
+    		<a class="card" href="#">
+  				<span class="card-title">
+  					<h3>This is a title for a card.</h3>
+  				</span>
+    			<span class="card-summary">
+    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+    			</span>
+    			<span class="card-meta">
+    				Published: June 18th, 2015
+    			</span>
+    		</a>
+    		<a class="card" href="#">
+    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/200/animals);">
+    				<span class="card-title">
+              <h3>This is a title for a card.This is a title for a card.This is a title for a card</h3>
+    				</span>
+    			</span>
+    			<span class="card-summary">
+    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+    			</span>
+    			<span class="card-meta">
+    				Published: June 18th, 2015
+    			</span>
+    		</a>
+    		<a class="card" href="#">
+    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/400/people)">
+    				<span class="card-title">
+    					<h3>This is a title for a card</h3>
+    				</span>
+    			</span>
+    			<span class="card-summary">
+    				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
+    			</span>
+    			<span class="card-meta">
+    				Published: June 18th, 2015
+    			</span>
+    		</a>
+    		<a class="card" href="#">
+    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/nature);">
+    				<span class="card-title">
+    					<h3>This is a title for a card</h3>
+    				</span>
+    			</span>
+    			<span class="card-summary">
+    				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
+    			</span>
+    			<span class="card-meta">
+    				Published: June 18th, 2015
+    			</span>
+    		</a>
+    	</div>
     </div>
   </div>
 
