--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <a class=""><h4 class="logo">QWERTY</h4></a>
   </div>
   <div class="header-right">
-    <a class="clean-search-show"><i class="icon ion-ios-search"></i></a>
+    <a class="clean-search-show"><i class="icon ion-ios-search-strong"></i></a>
   </div>
 </header>
 
@@ -94,7 +94,7 @@
   <div class="container">
     <div class="row">
     	<div class="cards">
-    		<a class="card" href="#">
+    		<div class="card card-1" href="#">
   				<span class="card-title">
   					<h3>This is a title for a card.</h3>
   				</span>
@@ -104,8 +104,13 @@
     			<span class="card-meta">
     				Published: June 18th, 2015
     			</span>
-  		  </a>
-    		<a class="card" href="#">
+    			<span class="card-meta-right">
+    				<i class="icon ion-android-open"></i>&nbsp;Read more
+    			</span>
+  		  </div>
+      </div>
+    	<div class="cards">
+    		<div class="card card-2" href="#">
   				<span class="card-title">
   					<h3>This is a title for a card.</h3>
   				</span>
@@ -115,8 +120,8 @@
     			<span class="card-meta">
     				Published: June 18th, 2015
     			</span>
-    		</a>
-    		<a class="card" href="#">
+  		  </div>
+    		<div class="card card-2" href="#">
   				<span class="card-title">
   					<h3>This is a title for a card.</h3>
   				</span>
@@ -126,8 +131,10 @@
     			<span class="card-meta">
     				Published: June 18th, 2015
     			</span>
-    		</a>
-    		<a class="card" href="#">
+    		</div>
+      </div>
+      <div class="cards">
+    		<div class="card card-3" href="#">
     			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/200/animals);">
     				<span class="card-title">
               <h3>This is a title for a card.This is a title for a card.This is a title for a card</h3>
@@ -139,8 +146,8 @@
     			<span class="card-meta">
     				Published: June 18th, 2015
     			</span>
-    		</a>
-    		<a class="card" href="#">
+    		</div>
+    		<div class="card card-3" href="#">
     			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/400/people)">
     				<span class="card-title">
     					<h3>This is a title for a card</h3>
@@ -152,8 +159,8 @@
     			<span class="card-meta">
     				Published: June 18th, 2015
     			</span>
-    		</a>
-    		<a class="card" href="#">
+    		</div>
+    		<div class="card card-3" href="#">
     			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/nature);">
     				<span class="card-title">
     					<h3>This is a title for a card</h3>
@@ -165,7 +172,7 @@
     			<span class="card-meta">
     				Published: June 18th, 2015
     			</span>
-    		</a>
+    		</div>
     	</div>
     </div>
   </div>
