--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
       <div class="spacer-sm"></div>
     </div>
     <ul>
-      <li class="pmenu-link"><a href="#"><i class="icon ion-flash"></i>&nbsp;&nbsp;Intro</a></li>
+      <li class="pmenu-link"><a href="#"><i class="icon ion-android-list"></i>&nbsp;&nbsp;Intro</a></li>
       <li class="pmenu-link"><a href="#"><i class="icon ion-coffee"></i>&nbsp;&nbsp;Conception</a></li>
       <li class="pmenu-link"><a href="#"><i class="icon ion-code"></i>&nbsp;&nbsp;CheetSheet</a></li>
       <li class="pmenu-submenu">
           <a href="#"><i class="icon ion-document-text"></i>&nbsp;&nbsp;Templates  <i class="pmenu-icon icon ion-ios-arrow-right"></i></a>
           <ul>
-              <li class="pmenu-link"><a href="#">Dashboard</a></li>
+              <li class="pmenu-link"><a href="#">
+                Dashboard</a></li>
               <li class="pmenu-link"><a href="#">Landing Pages</a></li>
               <li class="pmenu-link"><a href="">Coming Soon...</a></li>
           </ul>
@@ -65,7 +66,7 @@
     <a class=""><h4 class="logo">QWERTY</h4></a>
   </div>
   <div class="header-right">
-    <a class="clean-search-show"><i class="icon ion-ios-search"></i></a>
+    <a class="clean-search-show"><i class="icon ion-ios-search-strong"></i></a>
   </div>
 </header>
 
@@ -76,7 +77,10 @@
 
 <div class="site-overlay"></div>
 
+<!--****** MAIN CONTENT ************** -->
+
 <div class="wrapper">
+
   <div class="container">
     <div class="row">
       <div class="tx-center">
@@ -89,13 +93,99 @@
 
   <div class="container">
     <div class="row">
-      <div class="one-half column">
-        <h4>Visiblity</h4>
-        <p class="show-xl">This content is visible Desktop HD sreen</p>
-        <p class="show-lg">This content is visible Desktop sreen</p>
-        <p class="show-md">This content is visible tablet sreen</p>
-        <p class="show-sm">This content is visible phablet sreen</p>
-        <p class="show-xs">This content is visible mobile sreen</p>
+    	<div class="cards">
+    		<div class="card card-1" href="#">
+  				<span class="card-title">
+  					<h3>This is a title for a card.</h3>
+  				</span>
+    			<span class="card-summary">
+    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+    			</span>
+    			<span class="card-meta">
+    				Published: June 18th, 2015
+    			</span>
+    			<span class="card-meta-right">
+    				<i class="icon ion-android-open"></i>&nbsp;Read more
+    			</span>
+  		  </div>
+      </div>
+    	<div class="cards">
+    		<div class="card card-2" href="#">
+  				<span class="card-title">
+  					<h3>This is a title for a card.</h3>
+  				</span>
+    			<span class="card-summary">
+    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+    			</span>
+    			<span class="card-meta">
+    				Published: June 18th, 2015
+    			</span>
+  		  </div>
+    		<div class="card card-2" href="#">
+  				<span class="card-title">
+  					<h3>This is a title for a card.</h3>
+  				</span>
+    			<span class="card-summary">
+    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+    			</span>
+    			<span class="card-meta">
+    				Published: June 18th, 2015
+    			</span>
+    		</div>
+      </div>
+      <div class="cards">
+    		<div class="card card-3" href="#">
+    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/200/animals);">
+    				<span class="card-title">
+              <h3>This is a title for a card.This is a title for a card.This is a title for a card</h3>
+    				</span>
+    			</span>
+    			<span class="card-summary">
+    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+    			</span>
+    			<span class="card-meta">
+    				Published: June 18th, 2015
+    			</span>
+    		</div>
+    		<div class="card card-3" href="#">
+    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/400/people)">
+    				<span class="card-title">
+    					<h3>This is a title for a card</h3>
+    				</span>
+    			</span>
+    			<span class="card-summary">
+    				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
+    			</span>
+    			<span class="card-meta">
+    				Published: June 18th, 2015
+    			</span>
+    		</div>
+    		<div class="card card-3" href="#">
+    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/nature);">
+    				<span class="card-title">
+    					<h3>This is a title for a card</h3>
+    				</span>
+    			</span>
+    			<span class="card-summary">
+    				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
+    			</span>
+    			<span class="card-meta">
+    				Published: June 18th, 2015
+    			</span>
+    		</div>
+    	</div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <h4>Aligner</h4>
+      <div class="aligner" style="height: 200px;">
+        <p class="center">Hello</p>
+        <p class="right">Hello</p>
+        <p class="left">Hello</p>
+        <p class="right bottom">Hello</p>
+        <p class="left bottom">Hello</p>
       </div>
     </div>
   </div>
