--- a/concept.html
+++ b/concept.html
@@ -88,6 +88,14 @@
     </div>
   </div>
 
+  <div class="container">
+    <div class="row">
+      <div class="tx-center">
+        <h1 class="fw-100"><span class="fw-500">Simple</span> Framework + <span class="fw-500">Clean</span> Design</h1>
+      </div>
+    </div>
+  </div>
+
 </div>
 
 <!-- JS Files
