--- a/concept.html
+++ b/concept.html
@@ -91,7 +91,7 @@
   <div class="container">
     <div class="row">
       <div class="tx-center">
-        <h1 class="fw-100"><span class="fw-500">Simple</span> Framework + <span class="fw-500">Clean</span> Design</h1>
+        <h2 class="fw-900">Simple Framework <span class="fw-100">+</span> Clean Design</h2>
       </div>
     </div>
   </div>
