--- a/kanpe.html
+++ b/kanpe.html
@@ -96,38 +96,64 @@
   					<h3>This is a title for a card.</h3>
   				</span>
     			<span class="card-summary">
-    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+    				A summary will also be present. Usually two to three brief sentences about the content on the detail page. A summary will also be present. Usually two to three brief sentences about the content on the detail page.
     			</span>
-    			<span class="card-meta">
-    				Published: June 18th, 2015
-    			</span>
-    			<span class="card-meta-right">
-    				<i class="icon ion-android-open"></i>&nbsp;Read more
-    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
   		  </div>
       </div>
     	<div class="cards">
-    		<div class="card card-2" href="#">
+    		<div class="card info card-2" href="#">
   				<span class="card-title">
-  					<h3>This is a title for a card.</h3>
+  					<h3><i class="icon ion-information-circled"></i> Information (Blue-filled Card)</h3>
   				</span>
     			<span class="card-summary">
     				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
     			</span>
-    			<span class="card-meta">
-    				Published: June 18th, 2015
-    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
   		  </div>
-    		<div class="card card-2" href="#">
+    		<div class="card succ card-2" href="#">
   				<span class="card-title">
-  					<h3>This is a title for a card.</h3>
+  					<h3><i class="icon ion-checkmark-circled"></i> Success! (Green-filled Card)</h3>
   				</span>
     			<span class="card-summary">
     				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
     			</span>
-    			<span class="card-meta">
-    				Published: June 18th, 2015
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
+    		</div>
+      </div>
+    	<div class="cards">
+    		<div class="card warn card-2" href="#">
+  				<span class="card-title">
+  					<h3><i class="icon ion-alert-circled"></i> Warning! (Orange-filled Card)</h3>
+  				</span>
+    			<span class="card-summary">
+    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
     			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
+  		  </div>
+    		<div class="card dang card-2" href="#">
+  				<span class="card-title">
+  					<h3><i class="icon ion-close-circled"></i> Error. (Red-filled Card)</h3>
+  				</span>
+    			<span class="card-summary">
+    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+    			</span>
+    			<div class="card-meta">
+    				<span class="left">Published: June 18th, 2015</span>
+      			<span class="right">Read more</span>
+    			</div>
     		</div>
       </div>
       <div class="cards">
