modify menu class

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!--****** HEADER ************** -->
 
-<header class="pmenu-header">
+<header class="menu-header">
   <div class="header-left">
     <a class="menu-btn"><i class="icon ion-navicon"></i></a>
   </div>
