--- a/themes/admin.html
+++ b/themes/admin.html
@@ -63,13 +63,32 @@
 
   <div class="container">
     <div class="row">
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="row">
       <div class="cards">
-        <div class="card card-1 info" href="#">
+        <div class="card three columns info" href="#">
+          <span class="card-title">
+            <h3><i class="icon ion-information-circled"></i> Information</h3>
+          </span>
+          <span class="card-summary">
+            A summary will also be present. Usually two to three brief sentences about the content on the detail page. A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+          </span>
+        </div>
+        <div class="card three columns info" href="#">
+          <span class="card-title">
+            <h3><i class="icon ion-information-circled"></i> Information</h3>
+          </span>
+          <span class="card-summary">
+            A summary will also be present. Usually two to three brief sentences about the content on the detail page. A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+          </span>
+        </div>
+        <div class="card three columns info" href="#">
+          <span class="card-title">
+            <h3><i class="icon ion-information-circled"></i> Information</h3>
+          </span>
+          <span class="card-summary">
+            A summary will also be present. Usually two to three brief sentences about the content on the detail page. A summary will also be present. Usually two to three brief sentences about the content on the detail page.
+          </span>
+        </div>
+        <div class="card three columns info" href="#">
           <span class="card-title">
             <h3><i class="icon ion-information-circled"></i> Information</h3>
           </span>
@@ -78,57 +97,9 @@
           </span>
         </div>
       </div>
-    	<div class="cards">
-    		<div class="card card-4 info" href="#">
-  				<span class="card-title">
-  					<h3><i class="icon ion-information-circled"></i> Information</h3>
-  				</span>
-    			<span class="card-summary">
-    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
-    			</span>
-  		  </div>
-        <div class="card card-4 info" href="#">
-          <span class="card-title">
-            <h3><i class="icon ion-information-circled"></i> Information</h3>
-          </span>
-          <span class="card-summary">
-            A summary will also be present. Usually two to three brief sentences about the content on the detail page.
-          </span>
-        </div>
-        <div class="card card-4 info" href="#">
-          <span class="card-title">
-            <h3><i class="icon ion-information-circled"></i> Information</h3>
-          </span>
-          <span class="card-summary">
-            A summary will also be present. Usually two to three brief sentences about the content on the detail page.
-          </span>
-        </div>
-        <div class="card card-4 info" href="#">
-          <span class="card-title">
-            <h3><i class="icon ion-information-circled"></i> Information</h3>
-          </span>
-          <span class="card-summary">
-            A summary will also be present. Usually two to three brief sentences about the content on the detail page.
-          </span>
-        </div>
-      </div>
       <div class="cards">
-    		<div class="card card-4" href="#">
-    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/200/animals);">
-    				<span class="card-title">
-              <h3>This is a title for a card.</h3>
-    				</span>
-    			</span>
-    			<span class="card-summary">
-    				A summary will also be present. Usually two to three brief sentences about the content on the detail page.
-    			</span>
-    			<div class="card-meta">
-    				<span class="left">Published: June 18th, 2015</span>
-      			<span class="right">Read more</span>
-    			</div>
-    		</div>
-    		<div class="card card-4" href="#">
-    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/400/people)">
+    		<div class="card six columns" href="#">
+    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/arch);">
     				<span class="card-title">
     					<h3>This is a title for a card</h3>
     				</span>
@@ -141,21 +112,7 @@
       			<span class="right">Read more</span>
     			</div>
     		</div>
-    		<div class="card card-4" href="#">
-    			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/nature);">
-    				<span class="card-title">
-    					<h3>This is a title for a card</h3>
-    				</span>
-    			</span>
-    			<span class="card-summary">
-    				Using Flexbox is such a an easy, well supported way for grid-style content, such as cards. The cards height will expand to match the longest item.
-    			</span>
-    			<div class="card-meta">
-    				<span class="left">Published: June 18th, 2015</span>
-      			<span class="right">Read more</span>
-    			</div>
-    		</div>
-    		<div class="card card-4" href="#">
+    		<div class="card six columns" href="#">
     			<span class="card-header-img" style="background-image: url(http://placeimg.com/400/250/arch);">
     				<span class="card-title">
     					<h3>This is a title for a card</h3>
